# quant-desk

./: .gitignore  CODE_AUDIT_2026-05-18.md  HANDOFF.md  KNOWN_BUGS.md  NSW_CODE_REVIEW.md  Project1 - Original_OVERVIEW.md  README.md  UBUNTU_MIGRATION.md  backup.sh  requirements-dev.txt  test1.py
NSW/: .gitattributes  .gitignore  MANUAL.md  README.md  backup.sh  config.example.json  diagnostic.sh  pyproject.toml  requirements.txt  start_nsw.sh
NSW/examples/: load_example.py  test_everything.py
NSW/nsw/: __init__.py  backfill.py  config.py  database.py  fyers_client.py  loader.py  server.py  symbols.py  timeframes.py  update.py
NSW/scripts/: seed_indices.py  update_all.py
NSW/templates/: setup.html
TA/: .gitignore  README.md  pyproject.toml  start_ta.sh
TA/ta/: __init__.py  indicators.py  library.py  prefs.py  registry.py  server.py
TA/ta/static/css/: styles.css
TA/ta/static/js/: ta_chart.js
TA/ta/templates/: chart.html
first_install/: README.md  install.sh  modules.txt
